@@ -5,6 +5,7 @@ lib/Acme/MetaSyntactic/charlies_angels.pm
 lib/Acme/MetaSyntactic/compass.pm
 lib/Acme/MetaSyntactic/evangelist.pm
 lib/Acme/MetaSyntactic/michelin.pm
+lib/Acme/MetaSyntactic/nehi.pm
 lib/Acme/MetaSyntactic/sodor.pm
 Makefile.PL
 MANIFEST
